@@ -1,4 +1,8 @@
 
+2021-12-30  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: Fix handling of RESET ON phrase
+
 2021-12-29  Ron Norman <rjn@inglenet.com>
 
 	* parser.y: Save CONTROL FINAL fields
